  - upgrade request to 2.81.0 from 2.79.0
  - upgrade send to 0.15.3 from 0.14.2
  - update json response for server error reporting
  - update http error codes reported according to spec
    - httperror constructor does not take verbose anymore
    - trying to use unknown codes will result in 500 and log
    - remove 406
    - replace 409 & 422 with 400 + tailored status message

release 1.4.1
  - update database entries in docker for public data
  - update ranger Dockerfile to upgrade ranger docker to
      - htslib@1.4.1,
      - samtools@1.4.1
      - npg_ranger@1.4.0

release 1.4.0
  - add options to enable https communication between npg_ranger and npg_sentry

release 1.3.0
  - parameter in CLI for CA
  - parameter in CLI for token configuration
  - use request library to support proxy env variables for CLI client
  - switch to streaming for CLI client
  - upgrade mongodb to 2.2.22 from 2.2.21
  - upgrade js-md5 to 0.4.2 from 0.4.1
  - upgrade winston to 2.3.1 from 2.3.0
  - upgrade send to 0.14.2 from 0.14.1
  - add new authorisation strategy; make authorisation requests to
    npg_sentry via tokens

release 1.2.0
  - remove directly logging to file due to winston bug
  - add flags to change logging level
  - all logging output is now sent to stderr
  - upgrade mongodb to 2.2.21 from 2.2.12
  - upgrade browserify to 13.3.0 from 13.1.1
  - upgrade moment to 2.17.1 from 2.17.0
  - upgrade pem to 1.9.4 from 1.9.2
  - upgrade fs-extra to 2.0.0 from 1.0.0

release 1.1.0
  - cwd before executing pipelines and cleaning after pipeline finishes
  - added more filters for /sample url
  - switch to htslib@1.3.2 with curl support and samtools@1.3.1-npg-Sep2016
    in Travis
  - remove forwarding protocol from proxy, use protocol only from conf
  - upgrade moment to 2.17.0 from 2.16.0
  - upgrade mongodb to 2.2.12 from 2.2.11
  - upgrade pem to 1.9.2 from 1.8.3
  - upgrade tmp to 0.0.31 from 0.0.30
  - do not allow query strings containing multiple attribute-value pairs