@@ -81,14 +81,20 @@ class RangerController {
   }
 
   errorResponse(response, code, m, reasonPhrase) {
-    // Create error object anyway, it will validate the input
-    let err = new HttpError(response, code, m, reasonPhrase);
-    if (!response.finished) {
-      err.setErrorResponse();
-      response.end();
-    } else {
+    if ( response.finished ) {
       throw new Error('Attempt to set error response on a closed stream');
     }
+
+    if ( response.headersSent ) {
+      trailer.setDataTruncation(response, true);
+    } else {
+      trailer.removeDeclaration(this.response);
+      // Create error object anyway, it will validate the input
+      let err = new HttpError(response, code, m, reasonPhrase);
+      err.setErrorResponse();
+    }
+
+    response.end();
   }
 
   _methodIsAllowed() {
