@@ -21,8 +21,6 @@
 
 const LOGGER  = require('winston');
 
-const trailer = require('./trailer.js');
-
 const HTTP_ERROR_TYPES = {
   400: 'BadRequest',
   401: "InvalidAuthentication",
@@ -62,7 +60,7 @@ class HttpError {
     if ( HTTP_ERROR_TYPES.hasOwnProperty(codeString) ) {
       this.code      = code;
       this.errorType = ( reasonPhrase ) ? reasonPhrase
-                                       : HTTP_ERROR_TYPES[codeString];
+                                        : HTTP_ERROR_TYPES[codeString];
       this.message   = ( message || 'Unknown error' );
       LOGGER.info(`Server error ${code}: ${this.errorType} | ${this.message}.`);
     } else {
@@ -74,30 +72,21 @@ class HttpError {
   }
 
   /**
-   * If the headers have not been sent yet, sets the content type
-   * to 'application/json', response code as passed to the object's
-   * constructor and the body of the response to a json string
-   * according to the GA4GH specification. Chunked encoding is
-   * disabled.
+   * Sets the content type to 'application/json', response code as passed to
+   * the object's constructor and the body of the response to a json string
+   * according to the GA4GH specification. Chunked encoding is disabled.
    *
-   * If the headers have been sent, the trailer is set to mark the
-   * data truncated.
    */
   setErrorResponse() {
-    if (!this.response.headersSent) {
-      let jerr = JSON.stringify({
-        error:   this.errorType,
-        message: this.message
-      });
-      trailer.removeDeclaration(this.response);
-      this.response.removeHeader('Transfer-Encoding');
-      this.response.writeHead(this.code, this.message, {
-        'Content-Length': jerr.length,
-        'Content-Type':   'application/json'});
-      this.response.write(jerr);
-    } else {
-      trailer.setDataTruncation(this.response, true);
-    }
+    let jerr = JSON.stringify({
+      error:   this.errorType,
+      message: this.message
+    });
+    this.response.removeHeader('Transfer-Encoding');
+    this.response.writeHead(this.code, this.message, {
+      'Content-Length': jerr.length,
+      'Content-Type':   'application/json'});
+    this.response.write(jerr);
   }
 }
 
